# deep-learning-project-template

./: pyproject.toml  setup.py
NAME/: __init__.py  core.py  load.py  model.py
NAME/config/: defaults.py
NAME/train/: core.py
config/templates/: search.py
template/: cookiecutter.json
template/hooks/: post_gen_project.py
template/{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml  run.sh  setup.py
template/{{cookiecutter.project_slug}}/NAME/data/: dataset.py
template/{{cookiecutter.project_slug}}/NAME/train/: __main__.py
template/{{cookiecutter.project_slug}}/config/templates/: basic.py  search.py
template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  core.py  load.py  model.py
template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/config/: defaults.py  static.py
template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/data/: __init__.py  dataset.py  loader.py
template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/data/download/: __main__.py  core.py
template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/data/partition/: __main__.py
template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/data/preprocess/: __main__.py  core.py
template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/evaluate/: __init__.py  __main__.py  core.py  metrics.py
template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/partition/: __main__.py  core.py
template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/train/: __main__.py  core.py
