[build-system]
requires = [
    "setuptools>=61.0,<70",
    # "numpy",
    # "pybind11",
    # "torch"
]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
version = "0.0.0"
authors = [
  { name="{{cookiecutter.author_name}}", email="{{cookiecutter.author_email}}" }
]
description = "DESCRIPTION"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'GPUtil', 'torch', 'torchutil', 'yapecs'{{", 'torchaudio'" if cookiecutter.audio == 'yes' else ""}}
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
license = {text = "MIT License"}
keywords = []

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo_name}}"
Issues = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo_name}}/issues"

# [project.optional-dependencies]
# evaluate = [
# ]

[tool.setuptools.package-data]
{{cookiecutter.project_slug}} = ["assets/*", "assets/*/*"]